Removed deprecated error in PHP 8.2

--- a/assets/css/event-schema-admin.css
+++ b/assets/css/event-schema-admin.css
@@ -18,7 +18,7 @@
 }
 .upgrade_button{
 	height: 36px !important;
-	padding: 4px 20px !important;
+	padding: 0 20px !important;
 	font-size: 16px !important;
 }
 
